--- a/index.html
+++ b/index.html
@@ -1,11 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>emergency hotline</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Emergency Service</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  
+  <!-- Navbar -->
+  <header class="navbar">
+    <div class="brand">
+       <img class="logo-head" src="assets/logo.png" alt="">
+      <div>
+        <div>Emergency <br> Service</div>
+      </div>
+    </div>
+
+    <div class="nav-stats">
+      <div class="stat2" title="Likes">
+        <span id="heart-count">0</span>
+        <img class="logo-small" src="assets/heart.png" alt="heart">
+      </div>
+      <div class="stat2" title="Coins">
+        <span id="coin-count">100</span>
+         <img class="logo-small" src="assets/coin.png" alt="coin">
+      </div>
+      <div class="stat" title="Copy Count">
+        <span id="copy-count">2</span>
+        <span id="copy-count"> Copy</span>
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="heroMain">
+     <img class="dark-logo flex" src="assets/logo-dark.png" alt="">
+    <h1 class="hind-madurai-semibold ">জরুরি সেবা ডিরেক্টরি</h1>
+    <p class="hind-madurai-semibold ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+  </section>
+
+  <!-- Main Layout -->
+  <main class="container">
+    <!-- Cards -->
+    <section>
+      <div class="grid">
+
+        <!-- Example Card -->
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+             <img class="icon-size" src="assets/emergency.png" alt="">
+            <div class="titles">
+              <div class="bn-title">জাতীয় জরুরি সেবা</div>
+              <div class="en-title">National Emergency</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">999</div>
+          <div class="badge">সরকারি</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <!-- <div class="icon">🚨</div> -->
+             <img class="icon-size" src="assets/police.png" alt="">
+            <div class="titles">
+              <div class="bn-title">পুলিশ</div>
+              <div class="en-title">Police</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">999</div>
+          <div class="badge">পুলিশ</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <img class="icon-size" src="assets/fire-service.png" alt="">
+            <div class="titles">
+              <div class="bn-title">ফায়ার সার্ভিস</div>
+              <div class="en-title">Fire Service</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">999</div>
+          <div class="badge">ফায়ার</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <img class="icon-size" src="assets/ambulance.png" alt="">
+            <div class="titles">
+              <div class="bn-title">অ্যাম্বুলেন্স</div>
+              <div class="en-title">Ambulance</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">1994-999999</div>
+          <div class="badge">স্বাস্থ্য</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <img class="icon-size" src="assets/emergency.png" alt="">
+            <div class="titles">
+              <div class="bn-title">নারী ও শিশু সহায়তা</div>
+              <div class="en-title">Women & Child Helpline</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">109</div>
+          <div class="badge">সহায়তা</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <img class="icon-size" src="assets/emergency.png" alt="">
+            <div class="titles">
+              <div class="bn-title">দুদক</div>
+              <div class="en-title">Anti-Corruption</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">106</div>
+          <div class="badge">সরকারি</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <img class="icon-size" src="assets/emergency.png" alt="">
+            <div class="titles">
+              <div class="bn-title">বিদ্যুৎ বিভ্রাট</div>
+              <div class="en-title">Electricity Outage</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">16216</div>
+          <div class="badge">বিদ্যুৎ</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <img class="icon-size" src="assets/emergency.png" alt="">
+            <div class="titles">
+              <div class="bn-title">ব্র্যাক</div>
+              <div class="en-title">Brac</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number"></div>
+          <div class="number">16445</div>
+          <div class="badge">এনজিও</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+        <div class="card" data-name="National Emergency" data-number="999">
+          <div class="card-top">
+            <img class="icon-size" src="assets/emergency.png" alt="">
+            <div class="titles">
+              <div class="bn-title">বাংলাদেশ রেলওয়ে</div>
+              <div class="en-title">Bangladesh Railway</div>
+            </div>
+            <button class="heart-btn" title="Like">💗</button>
+          </div>
+          <div class="number">163</div>
+          <div class="badge">পরিবহন</div>
+          <div class="card-actions">
+            <button class="btn copy">📋 Copy</button>
+            <button class="btn call">📞 Call</button>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- Call History -->
+    <aside class="history">
+      <div class="history-head">
+        <div class="history-title">📞 Call History</div>
+        <button id="clear-history" class="btn" style="padding:6px 10px">Clear</button>
+      </div>
+      <div id="history-list" class="history-list">
+        <div style="color:var(--muted);font-size:13px;padding:8px 4px">No calls yet.</div>
+      </div>
+    </aside>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
