mobile responsive setup

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emergency Service</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/2de27d8d77.js" crossorigin="anonymous"></script>
 </head>
 <body>
   
@@ -50,147 +51,146 @@
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
              <img class="icon-size" src="assets/emergency.png" alt="">
-            <div class="titles">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">জাতীয় জরুরি সেবা</div>
               <div class="en-title">National Emergency</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number">999</div>
-          <div class="badge">সরকারি</div>
+          <div class="badge2">সরকারি</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
-            <!-- <div class="icon">🚨</div> -->
-             <img class="icon-size" src="assets/police.png" alt="">
-            <div class="titles">
+             <img class="icon-size2" src="assets/police.png" alt="">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">পুলিশ</div>
               <div class="en-title">Police</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number">999</div>
-          <div class="badge">পুলিশ</div>
+          <div class="badge2">পুলিশ</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
             <img class="icon-size" src="assets/fire-service.png" alt="">
-            <div class="titles">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">ফায়ার সার্ভিস</div>
               <div class="en-title">Fire Service</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number">999</div>
-          <div class="badge">ফায়ার</div>
+          <div class="badge2">ফায়ার</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
             <img class="icon-size" src="assets/ambulance.png" alt="">
-            <div class="titles">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">অ্যাম্বুলেন্স</div>
               <div class="en-title">Ambulance</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
-          <div class="number">1994-999999</div>
+          <div class="number2">1994-999999</div>
           <div class="badge">স্বাস্থ্য</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
             <img class="icon-size" src="assets/emergency.png" alt="">
-            <div class="titles">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">নারী ও শিশু সহায়তা</div>
               <div class="en-title">Women & Child Helpline</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number">109</div>
-          <div class="badge">সহায়তা</div>
+          <div class="badge2">সহায়তা</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
             <img class="icon-size" src="assets/emergency.png" alt="">
-            <div class="titles">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">দুদক</div>
               <div class="en-title">Anti-Corruption</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number">106</div>
-          <div class="badge">সরকারি</div>
+          <div class="badge2">সরকারি</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
             <img class="icon-size" src="assets/emergency.png" alt="">
-            <div class="titles">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">বিদ্যুৎ বিভ্রাট</div>
               <div class="en-title">Electricity Outage</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number">16216</div>
-          <div class="badge">বিদ্যুৎ</div>
+          <div class="badge2">বিদ্যুৎ</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
-            <img class="icon-size" src="assets/emergency.png" alt="">
-            <div class="titles">
+            <img class="icon-size" src="assets/brac.png" alt="">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">ব্র্যাক</div>
               <div class="en-title">Brac</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number"></div>
           <div class="number">16445</div>
-          <div class="badge">এনজিও</div>
+          <div class="badge2">এনজিও</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
         <div class="card" data-name="National Emergency" data-number="999">
           <div class="card-top">
-            <img class="icon-size" src="assets/emergency.png" alt="">
-            <div class="titles">
+            <img class="icon-size" src="assets/Bangladesh-Railway.png" alt="">
+            <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
+          </div>
+          <div class="titles">
               <div class="bn-title">বাংলাদেশ রেলওয়ে</div>
               <div class="en-title">Bangladesh Railway</div>
             </div>
-            <button class="heart-btn" title="Like">💗</button>
-          </div>
           <div class="number">163</div>
-          <div class="badge">পরিবহন</div>
+          <div class="badge2">পরিবহন</div>
           <div class="card-actions">
-            <button class="btn copy">📋 Copy</button>
-            <button class="btn call">📞 Call</button>
+            <button class="btn copy"><i class="card-icon fa-regular fa-copy"></i> Copy</button>
+            <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
@@ -200,7 +200,7 @@
     <!-- Call History -->
     <aside class="history">
       <div class="history-head">
-        <div class="history-title">📞 Call History</div>
+        <div class="history-title"><i class="card-icon fa-regular fa-clock"></i> Call History</div>
         <button id="clear-history" class="btn" style="padding:6px 10px">Clear</button>
       </div>
       <div id="history-list" class="history-list">
