button style change

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="grid">
 
         <!-- Example Card -->
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="জাতীয় জরুরি সেবা" data-number="999">
           <div class="card-top">
              <img class="icon-size" src="assets/emergency.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -64,7 +64,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="পুলিশ" data-number="999">
           <div class="card-top">
              <img class="icon-size2" src="assets/police.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -80,7 +80,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="ফায়ার সার্ভিস" data-number="999">
           <div class="card-top">
             <img class="icon-size" src="assets/fire-service.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -96,7 +96,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="অ্যাম্বুলেন্স" data-number="1994-999999">
           <div class="card-top">
             <img class="icon-size" src="assets/ambulance.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -112,7 +112,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="নারী ও শিশু সহায়তা" data-number="109">
           <div class="card-top">
             <img class="icon-size" src="assets/emergency.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -128,7 +128,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="দুদক" data-number="106">
           <div class="card-top">
             <img class="icon-size" src="assets/emergency.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -144,7 +144,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="বিদ্যুৎ বিভ্রাট" data-number="16216">
           <div class="card-top">
             <img class="icon-size" src="assets/emergency.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -160,7 +160,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="ব্র্যাক" data-number="16445">
           <div class="card-top">
             <img class="icon-size" src="assets/brac.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -177,7 +177,7 @@
             <button class="btn call"><i class="card-icon2 fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
-        <div class="card" data-name="National Emergency" data-number="999">
+        <div class="card" data-name="বাংলাদেশ রেলওয়ে" data-number="163">
           <div class="card-top">
             <img class="icon-size" src="assets/Bangladesh-Railway.png" alt="">
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
@@ -201,10 +201,10 @@
     <aside class="history">
       <div class="history-head">
         <div class="history-title"><i class="card-icon fa-regular fa-clock"></i> Call History</div>
-        <button id="clear-history" class="btn" style="padding:6px 10px">Clear</button>
+        <button id="clear-history" class="btn2">Clear</button>
       </div>
       <div id="history-list" class="history-list">
-        <div style="color:var(--muted);font-size:13px;padding:8px 4px">No calls yet.</div>
+        <div style="font-size:13px;padding:8px 4px">No calls yet.</div>
       </div>
     </aside>
   </main>
