java and style and responsive etc add

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <title>Emergency Service</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/2de27d8d77.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   
   <!-- Navbar -->
-  <header class="navbar">
+  <header class="navbar navbar2 co">
     <div class="brand">
        <img class="logo-head" src="assets/logo.png" alt="">
       <div>
@@ -38,7 +41,7 @@
   <section class="heroMain">
      <img class="dark-logo flex" src="assets/logo-dark.png" alt="">
     <h1 class="hind-madurai-semibold ">জরুরি সেবা ডিরেক্টরি</h1>
-    <p class="hind-madurai-semibold ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+    <p class="s hind-madurai-semibold ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
   </section>
 
   <!-- Main Layout -->
@@ -54,7 +57,7 @@
             <button class="heart-btn" title="Like"><i class="card-icon fa-regular fa-heart"></i></button>
           </div>
           <div class="titles">
-              <div class="bn-title">জাতীয় জরুরি সেবা</div>
+              <div class="bn-title hind-madurai-bold">জাতীয় জরুরি সেবা</div>
               <div class="en-title">National Emergency</div>
             </div>
           <div class="number">999</div>
